--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="client">Client</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Hotel</a>
+                <a class="nav-link" href="hotel">Hotel</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link">Réservation</a>
