--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="hotel">Hotel</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Réservation</a>
+                <a class="nav-link" href="reservation">Réservation</a>
               </li>
             </ul>
         </div>
