--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <div *ngIf="success == true" class="alert alert-success" role="alert">Opération réussite</div>
+  <div *ngIf="error == true"  class="alert alert-danger" role="alert">Opération échoué</div>
     <div class="row">
         <div class="col-9">
             <h1>Listes des hotels</h1>
@@ -50,26 +52,32 @@
                         <div class="mb-3">
                             <label for="nom" class="form-label">Nom</label>
                             <input type="text" class="form-control" name="nom" id="nom" aria-describedby="nom" placeholder="Nom de l'hôtel" [(ngModel)]="hotel.nom">
+                            <div *ngIf="erreur?.nom != undefined"  class="alert alert-danger" role="alert">{{erreur.nom}}</div>
                         </div>
                         <div class="mb-3">
                             <label for="etoiles" class="form-label">Nombres d'étoiles</label>
                             <input type="number" class="form-control" name="etoiles" id="etoiles" aria-describedby="etoiles" placeholder="Nombre d'étoiles'" [(ngModel)]="hotel.etoiles">
+                            <div *ngIf="erreur?.etoiles != undefined"  class="alert alert-danger" role="alert">{{erreur.etoiles}}</div>
                         </div>
                         <div class="mb-3">
                             <label for="adresse" class="form-label">Adresse</label>
                             <input type="text" class="form-control" name="adresse" id="adresse" aria-describedby="adresse" placeholder="Adresse de l'hôtel" [(ngModel)]="hotel.adresse">
+                            <div *ngIf="erreur?.adresse != undefined"  class="alert alert-danger" role="alert">{{erreur.adresse}}</div>
                         </div>
                         <div class="mb-3">
                             <label for="telephone" class="form-label">Telephone</label>
                             <input type="text" class="form-control" name="telephone" id="telephone" aria-describedby="telephone" placeholder="Telephone de l'hôtel" [(ngModel)]="hotel.telephone">
+                            <div *ngIf="erreur?.telephone != undefined"  class="alert alert-danger" role="alert">{{erreur.telephone}}</div>
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
                             <input type="email" class="form-control" name="email" id="email" aria-describedby="email" placeholder="Email de l'hôtel" [(ngModel)]="hotel.email">
+                            <div *ngIf="erreur?.email != undefined"  class="alert alert-danger" role="alert">{{erreur.email}}</div>
                         </div>
                         <div class="mb-3">
                             <label for="ville" class="form-label">Ville</label>
                             <input type="text" class="form-control" name="ville" id="ville" aria-describedby="ville" placeholder="Ville de l'hôtel" [(ngModel)]="hotel.ville">
+                            <div *ngIf="erreur?.ville != undefined"  class="alert alert-danger" role="alert">{{erreur.ville}}</div>
                         </div>
                         <button type="submit" class="btn btn-primary">Envoyer</button>
                     </form>
